--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gustav Sida</title>
+    <title>Gustavs Sida</title>
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
     <h1>Gustav Homberg</h1>
